[@dhealthdapps/frontend] fix(style): background color of qr and dappbutton on hover, alignment of button in dappqr

--- a/runtime/dapp-frontend-vue/src/components/Header/Header.scss
+++ b/runtime/dapp-frontend-vue/src/components/Header/Header.scss
@@ -12,6 +12,11 @@
   justify-content: space-between;
   padding: 0 15px;
 
+  // temporary fix for QR and DappButton bgcolor
+  .style-primary {
+    background-color: transparent !important;
+  }
+
   &__navigation {
     li {
       a {
